# src/api/audiobook_generator/audiobook.py
@@ -1,16 +1,15 @@
-from fastapi import APIRouter
-from fastapi.responses import JSONResponse
+from fastapi import APIRouter, HTTPException
+from fastapi.responses import StreamingResponse
 import io
-import soundfile as sf
 from src.model.pydantic_model import BookTextBody
 from src.nlp.tts.TTS import generate_audio_book as generate_audio_book_v2
-import os
 from src.utils.utils import preprocess_arabic_text
 
 # Create a new router for the audiobook generator
 router = APIRouter()
 
-@router.post("/v2/text-to-speech")
+
+@router.post("/v2/text-to-speech", response_class=StreamingResponse)
 async def text_to_speech_v2(payload: BookTextBody):
     """
     Converts the given text to speech and returns the audio as a WAV file.
@@ -19,7 +18,15 @@ async def text_to_speech_v2(payload: BookTextBody):
         payload (BookTextBody): The request payload containing the text to convert.
 
     Returns:
-        JSONResponse: The audio file as a mp3 file.
+        StreamingResponse: The audio file as a WAV file.
     """
-    audio_book_output_path = generate_audio_book_v2(payload.text, payload.book_name)
-    return JSONResponse(content={"audio_book_output_path": audio_book_output_path})
+    # Generate audio from text
+    audio_segment = generate_audio_book_v2(preprocess_arabic_text(payload.text), payload.book_name)
+
+    # Convert the Pydub audio segment to a byte stream
+    byte_io = io.BytesIO()
+    audio_segment.export(byte_io, format="wav")
+    byte_io.seek(0)  # Go to the beginning of the BytesIO buffer
+
+    # Return the audio file
+    return StreamingResponse(byte_io, media_type="audio/wav")
